# 2026-ml-study

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00_setup_test.ipynb  ch08_01_rnn_from_scratch.ipynb  ch08_02_lstm_from_scratch.ipynb  ch08_03_attention_from_scratch.ipynb  ch08_04_bert_transformer_from_scratch.ipynb  ch08_rnn_lstm_attention_bert.ipynb  cnn_001_mnist_handwriting.ipynb  colab_git_setup.ipynb  tensorflow_001.ipynb  tensorflow_002_mlp_shape_and_training_experiments.ipynb
notebooks/DLFS_code/: README.md  notebook_env.py
notebooks/DLFS_code/01_foundations/: Code.ipynb  math.ipynb
notebooks/DLFS_code/02_fundamentals/: Code.ipynb  math.ipynb
notebooks/DLFS_code/03_dlfs/: Code.ipynb  Code_pytorch.ipynb  Code_tensorflow.ipynb
notebooks/DLFS_code/04_extensions/: Code.ipynb  Math.ipynb
notebooks/DLFS_code/05_convolutions/: Code.ipynb  Math.ipynb  Numpy_Convolution_Demos.ipynb
notebooks/DLFS_code/06_rnns/: Autograd_Simple.ipynb  Math.ipynb  RNN_DLFS.ipynb
notebooks/DLFS_code/07_PyTorch/: Code.ipynb
notebooks/DLFS_code/lincoln/lincoln/: activations.py  base.py  conv.py  dense.py  dropout.py  layers.py  losses.py  network.py  optimizers.py  reshape.py  (+1 more)
notebooks/study_01_pytorch_core/: 01_autograd_essentials.ipynb  02_training_pipeline.ipynb
notebooks/study_02_cnn_rnn/: 01_cnn_essentials.ipynb  02_rnn_lstm_essentials.ipynb
notebooks/study_03_transformer/: 01_attention_from_scratch.ipynb  02_multihead_and_transformer_block.ipynb  03_huggingface_practical.ipynb
src/numpy_backprop/: compare_grads.py  mlp.py  test_mlp_backprop.py
(+7 files in other folders)
